# release-ready

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: review_api.sh  review_diff.sh  simple.diff
src/release_ready/: __init__.py  cli.py  consensus.py  diff.py  llm.py  orchestrator.py  server.py  sources.py  specialists.py
tests/: conftest.py  test_consensus.py  test_diff.py  test_llm.py  test_orchestrator.py
